...
    android:scrollbars="none">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/clRoot"
        android:visibility="gone">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivSenderBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...
            app:layout_constraintBottom_toBottomOf="@id/ivSenderImage"
            app:layout_constraintStart_toEndOf="@id/ivSenderImage"
            app:layout_constraintTop_toTopOf="@id/ivSenderImage"
            tools:text="test" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivCloseCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/ivSenderBox"
            android:layout_marginTop="@dimen/margin_6"
            app:srcCompat="@drawable/ic_btn_close"/>
...
